--- a/src/main/resources/static/css/easycook.css
+++ b/src/main/resources/static/css/easycook.css
@@ -152,3 +152,14 @@ p {
 #myPage {
 	margin-left: 1px;
 }
+
+.cont-list li {
+	display: inline-block;
+	border: 1px solid #e6e7e8;
+	width: 250px;
+	height: 200px;
+	
+}
+.caption {
+
+}
