--- a/src/main/resources/static/css/easycook.css
+++ b/src/main/resources/static/css/easycook.css
@@ -253,3 +253,9 @@ p {
             text-shadow: 1px 1px 2px gray;
             color: white;
         }
+        
+  /*      .input-group {
+			position: relative;
+    		display: table;
+   			border-collapse: separate;
+		}*/
